--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,29 @@
 <%- include('partials/header.ejs') %>
 <body>
   <%- include('partials/navbar.ejs') %>
-  <h1>teste</h1>
+  <div class="container">
+    <hr />
+    <h1 id="perguntar">João Respostas</h1>
+    <br />
+    <a href="/perguntar" class="btn btn-danger" id="perguntar">Perguntar</a>
+    <hr />
+
+    <% perguntas.forEach(pergunta => { %>
+    <br />
+    <div class="card">
+      <div class="card-body">
+        <h3><%= pergunta.titulo %></h3>
+        <hr />
+        <p><%= pergunta.descricao %></p>
+      </div>
+      <div class="card-footer">
+        <a href="/pergunta/<%=pergunta.id%>" class="btn btn-danger"
+          >Responder</a
+        >
+      </div>
+    </div>
+
+    <% }) %>
+  </div>
 </body>
 <%- include('partials/footer.ejs') %>
